Fix css style & whitespace.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,14 +1,22 @@
+body > .container {
+	border-top: 2px solid #adddd5;
+	padding-left: 0px;
+	padding-right: 0px;
+	width: 100%;
+}
+
 .navbar-default {
 	background-color: transparent;
 	border-color: transparent;
+	margin-bottom: 5px;
 }
 .navbar-default .navbar-brand {
     line-height: 120px;
     height: 120px;
-    padding-top: 0;
+    padding-top: 0px;
 }
 .navbar-default .navbar-nav > li > a {
-	font-size: 16px;
+	font-size: 15px;
 	font-weight: bold;
 	color: #333;
 }
@@ -18,16 +26,17 @@
 	background-color: transparent;
 }
 .navbar-default .navbar-brand-image {
-	height: 100px;
+	height: 86px;
 	width: auto;
 	max-width: 100%;
+	margin-left: 18px;
 }
 .navbar-default .navbar-toggle {
-	margin-top: 72px;
+	margin-top: 50px;
 }
 .navbar-default .language-menu {
 	position: absolute;
-	right: 9px;
+	right: 20px;
 	top: 0px;
 	display: inline-block;
 	overflow: auto;
@@ -35,6 +44,8 @@
 .navbar-default .language-menu > a {
 	font-size: 10px;
 	color: #777;
+	padding-left: 9px;
+	padding-right: 9px;
 }
 .navbar-default .language-menu > a:hover,
 .navbar-default .language-menu > a:focus {
@@ -51,14 +62,37 @@
 	font-size: 8px;
 	color: #999;
 }
+.footer,
+.navbar-default .container-fluid {
+	padding-left: 15px;
+	padding-right: 15px;
+}
 @media (min-width: 768px) {
 	.navbar-default .navbar-collapse {
-		margin-top: 46px;
+		margin-top: 43px;
+	}
+	.navbar-default .navbar-collapse .navbar-nav {
+		margin-left: 10px;
+	}
+	.navbar-default .navbar-collapse .navbar-nav > li {
+		margin-left: 20px;
 	}
 }
 @media only screen and (max-width : 320px) {
 	.navbar-default .navbar-brand-image {
-		height: 86px;
+		height: 60px;
+		margin-left: 10px;
+	}
+	.navbar-default .navbar-toggle {
+		margin-top: 49px;
+	}
+	.navbar-default .language-menu {
+		right: 10px;
+	}
+	.navbar-default .language-menu > a {
+		font-size: 8px;
+		padding-left: 4px;
+		padding-right: 4px;
 	}
 	.footer,
 	.navbar-default .container-fluid {
